fixup! [FIX] mail: improve user mention highlight visibility

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -28,14 +28,6 @@
     }
 }
 
-.o-mail-Message-body {
-    a.o_mail_redirect {
-        padding: map-get($spacers, 1);
-        border-radius: $border-radius;
-        background: var(--MailRedirect-background, rgba($o-brand-primary, .2));
-    }
-}
-
 .o-mail-ChatWindow .o-mail-Message:not(.o-cancelSelfAuthored).o-selfAuthored {
     flex-direction: row-reverse;
 
